# security_security_component_manager

./: AGENTS.md  BUILD.gn  CLAUDE.md  README.md  README_zh.md  bundle.json  hisysevent.yaml
cfi_check_tools/: README.md  (+2 more)
frameworks/: BUILD.gn
frameworks/common/include/: sec_comp_err.h  sec_comp_log.h  sec_comp_tool.h
frameworks/common/src/: sec_comp_tool.cpp
frameworks/enhance_adapter/include/: sec_comp_enhance_adapter.h
frameworks/enhance_adapter/src/: sec_comp_enhance_adapter.cpp
frameworks/enhance_adapter/test/: BUILD.gn
frameworks/enhance_adapter/test/unittest/src/: sec_comp_enhance_adapter_test.cpp  sec_comp_enhance_adapter_test.h
frameworks/inner_api/enhance_kits/: BUILD.gn
frameworks/inner_api/enhance_kits/test/: BUILD.gn
frameworks/inner_api/enhance_kits/test/unittest/src/: sec_comp_enhance_test.cpp  sec_comp_enhance_test.h
frameworks/inner_api/security_component/: BUILD.gn
frameworks/inner_api/security_component/include/: i_sec_comp_dialog_callback.h  i_sec_comp_service.h  sec_comp_caller_authorization.h  sec_comp_client.h  sec_comp_death_recipient.h  sec_comp_dialog_callback.h  sec_comp_load_callback.h  sec_comp_proxy.h
frameworks/inner_api/security_component/src/: sec_comp_caller_authorization.cpp  sec_comp_client.cpp  sec_comp_death_recipient.cpp  sec_comp_dialog_callback.cpp  sec_comp_dialog_callback_stub.cpp  sec_comp_kit.cpp  sec_comp_load_callback.cpp  sec_comp_proxy.cpp  sec_comp_ui_register.cpp
frameworks/inner_api/security_component/test/: BUILD.gn
frameworks/inner_api/security_component/test/unittest/src/: location_button_test.cpp  location_button_test.h  paste_button_test.cpp  paste_button_test.h  save_button_test.cpp  save_button_test.h  sec_comp_kit_test.cpp  sec_comp_kit_test.h  sec_comp_register_callback_test.cpp  test_common.cpp  test_common.h
frameworks/security_component/include/: sec_comp_click_event_parcel.h
frameworks/security_component/src/: location_button.cpp  paste_button.cpp  save_button.cpp  sec_comp_base.cpp  sec_comp_click_event_parcel.cpp
interfaces/inner_api/enhance_kits/: BUILD.gn
interfaces/inner_api/enhance_kits/include/: sec_comp_enhance_kit.h
interfaces/inner_api/enhance_kits/src/: sec_comp_enhance_kit.cpp
interfaces/inner_api/enhance_kits/test/: BUILD.gn
interfaces/inner_api/enhance_kits/test/unittest/src/: sec_comp_enhance_test.cpp
interfaces/inner_api/security_component/: BUILD.gn
interfaces/inner_api/security_component/include/: i_sec_comp_dialog_callback.h  i_sec_comp_service.h  location_button.h  paste_button.h  save_button.h  sec_comp_base.h  sec_comp_client.h  sec_comp_dialog_callback.h  sec_comp_dialog_callback_stub.h  sec_comp_enhance_adapter.h  sec_comp_enhance_kit_c.h  sec_comp_err.h  sec_comp_info.h  sec_comp_kit.h  sec_comp_proxy.h  sec_comp_rawdata.h  security_component_service_ipc_interface_code.h
interfaces/inner_api/security_component/src/: sec_comp_client.cpp  sec_comp_dialog_callback.cpp  sec_comp_kit.cpp  sec_comp_proxy.cpp
interfaces/inner_api/security_component/test/: BUILD.gn
interfaces/inner_api/security_component/test/unittest/src/: location_button_test.cpp  paste_button_test.cpp  save_button_test.cpp  sec_comp_kit_test.cpp  sec_comp_register_callback_test.cpp  test_common.cpp  test_common.h
services/security_component_service/sa/: BUILD.gn  ISecCompService.idl  security_component_service.cfg
services/security_component_service/sa/sa_main/: app_state_observer.cpp  app_state_observer.h  delay_exit_task.cpp  delay_exit_task.h  first_use_dialog.cpp  first_use_dialog.h  sec_comp_dialog_callback_proxy.cpp  sec_comp_dialog_callback_proxy.h  sec_comp_entity.cpp  sec_comp_entity.h  sec_comp_info_helper.cpp  sec_comp_info_helper.h  sec_comp_malicious_apps.cpp  sec_comp_malicious_apps.h  sec_comp_manager.cpp  sec_comp_manager.h  sec_comp_perm_manager.cpp  sec_comp_perm_manager.h  sec_comp_service.cpp  sec_comp_service.h  sec_comp_stub.cpp  sec_comp_stub.h  sec_event_handler.cpp  window_info_helper.cpp  window_info_helper.h
services/security_component_service/sa/sa_profile/: 3506.json  BUILD.gn
services/security_component_service/sa/test/: BUILD.gn
services/security_component_service/sa/test/mock/include/: ability_manager_client.h  accesstoken_kit.h  app_mgr_interface.h  application_state_observer_stub.h  bundle_info.h  bundle_mgr_client.h  datashare_helper.h  display.h  display_info.h  display_manager.h  iservice_registry.h  mock_app_mgr_proxy.h  mock_system_ability_proxy.h  system_ability.h  window_manager.h
test/fuzztest/security_component/innerkits/getenhanceremoteobject_fuzzer/: BUILD.gn  getenhanceremoteobject_fuzzer.cpp  getenhanceremoteobject_fuzzer.h
test/fuzztest/security_component/service/: security_component_fuzz.gni
test/fuzztest/security_component/service/getenhanceremoteobjectstub_fuzzer/: BUILD.gn  getenhanceremoteobjectstub_fuzzer.cpp  getenhanceremoteobjectstub_fuzzer.h
test/fuzztest/security_component/service/preregisterseccompprocessstub_fuzzer/: BUILD.gn  preregisterseccompprocessstub_fuzz.cpp  preregisterseccompprocessstub_fuzz.h
test/fuzztest/security_component/service/registersecuritycomponentstub_fuzzer/: BUILD.gn  registersecuritycomponentstub_fuzzer.cpp  registersecuritycomponentstub_fuzzer.h
test/fuzztest/security_component/service/reportsecuritycomponentclickeventstub_fuzzer/: BUILD.gn  reportsecuritycomponentclickeventstub_fuzzer.cpp  reportsecuritycomponentclickeventstub_fuzzer.h
test/fuzztest/security_component/service/securitycomponentstub_fuzzer/: BUILD.gn  securitycomponentstub_fuzzer.cpp  securitycomponentstub_fuzzer.h
test/fuzztest/security_component/service/unregistersecuritycomponentstub_fuzzer/: BUILD.gn  unregistersecuritycomponentstub_fuzzer.cpp  unregistersecuritycomponentstub_fuzzer.h
test/fuzztest/security_component/service/updatesecuritycomponentstub_fuzzer/: BUILD.gn  updatesecuritycomponentstub_fuzzer.cpp  updatesecuritycomponentstub_fuzzer.h
test/fuzztest/security_component/service/verifysavepermissionstub_fuzzer/: BUILD.gn  verifysavepermissionstub_fuzzer.cpp  verifysavepermissionstub_fuzzer.h
(+82 files in other folders)
