# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

sec_comp_root_dir = "../../.."

config("sec_comp_enhance_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${sec_comp_root_dir}/frameworks/common/include",
    "${sec_comp_root_dir}/frameworks/enhance_adapter/include",
  ]
}

ohos_source_set("security_component_enhance_sdk_src_set") {
  subsystem_name = "security"
  part_name = "security_component_manager"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"
  public_configs = [ ":sec_comp_enhance_config" ]

  include_dirs = [
    "include",
    "${sec_comp_root_dir}/frameworks/common/include",
    "${sec_comp_root_dir}/frameworks/enhance_adapter/include",
  ]

  sources = [ "src/sec_comp_enhance_kit.cpp" ]

  deps = [ "${sec_comp_root_dir}/frameworks:security_component_enhance_adapter_src_set" ]

  configs = [ "${sec_comp_root_dir}/config:coverage_flags" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-fvisibility=hidden",
  ]
}

ohos_source_set("security_component_no_cfi_enhance_sdk_src_set") {
  branch_protector_ret = "pac_ret"
  subsystem_name = "security"
  part_name = "security_component_manager"
  public_configs = [ ":sec_comp_enhance_config" ]

  include_dirs = [
    "include",
    "${sec_comp_root_dir}/frameworks/common/include",
    "${sec_comp_root_dir}/frameworks/enhance_adapter/include",
  ]

  sources = [ "src/sec_comp_enhance_kit.cpp" ]

  deps = [ "${sec_comp_root_dir}/frameworks:security_component_no_cfi_enhance_adapter_src_set" ]

  configs = [ "${sec_comp_root_dir}/config:coverage_flags" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-fvisibility=hidden",
  ]
}
