# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

sec_comp_root_dir = "../../.."

config("sec_comp_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${sec_comp_root_dir}/frameworks/common/include",
    "${sec_comp_root_dir}/frameworks/enhance_adapter/include/",
    "${sec_comp_root_dir}/interfaces/inner_api/enhance_kits/include",
  ]
}

ohos_shared_library("libsecurity_component_sdk") {
  subsystem_name = "security"
  part_name = "security_component_manager"
  output_name = "libsecurity_component_sdk"

  public_configs = [ ":sec_comp_config" ]

  include_dirs = [
    "include",
    "${sec_comp_root_dir}/frameworks/common/include",
    "${sec_comp_root_dir}/frameworks/enhance_adapter/include/",
    "${sec_comp_root_dir}/interfaces/inner_api/enhance_kits/include",
    "${sec_comp_root_dir}/frameworks/security_component/include",
  ]

  sources = [
    "src/sec_comp_caller_authorization.cpp",
    "src/sec_comp_client.cpp",
    "src/sec_comp_death_recipient.cpp",
    "src/sec_comp_dialog_callback.cpp",
    "src/sec_comp_dialog_callback_stub.cpp",
    "src/sec_comp_kit.cpp",
    "src/sec_comp_load_callback.cpp",
    "src/sec_comp_proxy.cpp",
    "src/sec_comp_ui_register.cpp",
  ]

  deps = [
    "${sec_comp_root_dir}/frameworks:security_component_enhance_adapter_src_set",
    "${sec_comp_root_dir}/frameworks:security_component_framework_src_set",
    "${sec_comp_root_dir}/interfaces/inner_api/enhance_kits:security_component_enhance_sdk_src_set",
  ]

  configs = [ "${sec_comp_root_dir}/config:coverage_flags" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  public_external_deps = [ "json:nlohmann_json_static" ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-fvisibility=hidden",
  ]
}
